--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-navigation-fluid-transitions": "^0.3.2",
     "react-scripts": "3.0.0"
   },
   "scripts": {
